--- a/app/views/public/homes/top.html.erb
+++ b/app/views/public/homes/top.html.erb
@@ -1,58 +1,61 @@
-<h1>トップ画面</h1>
+<h1>ガーデニングコミュ</h1>
 <div class = "container-fluid">
-  <div class = "row m-3">
+  <div class = "row no-gutters">
     <div class = "col-md-3">
       <%= render 'public/users/list',keyword: @keyword, tag_lists: @tag_lists %>
     </div>
-    <div class = "col-md-9">
-      <div class="card-group">
-
+    <div class = "col-md-5 offset-md-1">
+      <div class="card　w-50 mx-auto mt-4 shadow-lg">
       <% @posts.each do |post| %>
-
-      <div class="mt-4 shadow-lg">
+    <div class="mt-4 shadow-lg">
     <%= image_tag post.get_photo(200,200), class:"card-img-top"; %>
   <div class="card-body">
     <div class="row">
       <div class="col-3">
-        <%= image_tag post.user.get_profile_image(50,50), class:"mt-3 rounded-circle"; %>
-
+        <%= image_tag post.user.get_profile_image(60,60), class:"rounded-circle";  %>
       </div>
       <div class="col-9">
         <p class="card-title">
           <%= link_to(post_path(post.id), class:"text-dark") do %>
-            <strong><span>
+            <strong>
               <%= link_to post_path(post.id) do %>
                 <%= post.title %>
               <% end %>
-              <%#= post.user.nickname %></span>
+              <%#= post.user.nickname %>
             </strong>
           <% end %>
         </p>
         <p class="card-text">
-          <%#S= post.genre.name %>
+          <span><i class="fas fa-user"></i> By <%= post.user.nickname %>
+          </span>
         </p>
-        <span><i class="fas fa-user"></i> By <%= post.user.nickname %> ｜ </span>
-        <span><%= link_to "#{post.post_comments.count} コメント", post_path(post.id), class:"text-dark" %></span>
-        <span><%= post.created_at.strftime('%Y/%m/%d  %H:%M') %></span>
+        <p class="card-text">
+
+            <span>
+              <%= link_to post_path(post.id) do %>
+                <i class="far fa-comment text-dark"></i><%= post.post_comments.count %>
+              <% end %>
+            </span>
+            <span>　</span>
+            <span>
+              <% if post.favorited_by?(current_user) %>
+                    <i class="fas fa-thumbs-up"></i><%= post.favorites.count %>
+                  <% else %>
+                    <i class="far fa-thumbs-up"></i><%= post.favorites.count %>
+              <% end %>
+            </span>
+            <span>　</span>
+          <small class="text-muted">
+            <span>
+              <%= post.created_at.strftime('%Y/%m/%d  %H:%M') %>
+            </span>
+          </small>
+        </p>
       </div>
+      <div class="col-md-3"></div>
     </div>
   </div>
 </div>
-
-        <table>
-          <tr>
-            <td>
-              <%#= post.genre.name %>
-              <%#= link_to post_path(post.id) do %>
-                <%#= post.title %>
-              <%# end %>
-            </td>
-            <td><%#= post.user.nickname %></td>
-          </tr>
-          <tr>
-            <td><%#= post.created_at.strftime('%Y/%m/%d  %H:%M') %></td>
-          </tr>
-        </table>
       <% end %>
       </div>
       <div class="row justify-content-end">
