--- a/app/views/public/posts/index.html.erb
+++ b/app/views/public/posts/index.html.erb
@@ -1,50 +1,51 @@
 <h1>投稿一覧</h1>
-<div class = "container">
+<div class = "container-fluid">
   <div class = "row">
     <div class = "col-md-3">
       <%= render 'public/users/list',keyword: @keyword, tag_lists: @tag_lists %>
     </div>
-    <div class = "col-md-9">
+    <div class = "col-md-6 offset-md-1">
       <% @posts.each do |post| %>
-        <table>
-          <tr>
-            <td>
-              【<%= post.genre.name %>】
-              <%= link_to post_path(post.id) do %>
-                <%= post.title %>
-              <% end %>
-            </td>
-            <td>投稿者：<%= post.user.nickname %></td>
-          </tr>
-          <tr>
-            <td><%= post.created_at.strftime('%Y/%m/%d  %H:%M') %>
-              <% if post.favorited_by?(current_user) %>
-                  ♥<%= post.favorites.count %>
-              <% else %>
-                  ♡<%= post.favorites.count %>
-              <% end %>
-            </td>
-            <td>
-              (<%= post.post_comments.count %>)
-            </td>
-            <td><%#= link_to list.tag_name, posts_path(tag_id: list.id)%>
-              <% post.tags.each do |tag| %>
-                <%=link_to "##{tag.tag_name}",posts_path(tag_id: tag.id) %>
-              <%end%>
-            </td>
-          </tr>
-          <%#= @genre.name %>
+        <div class="card">
+          <div class="row no-gutters">
+            <div class="col-md-4">
+              <%= image_tag post.user.get_profile_image(60,60), class:"m-3 rounded-circle";  %>
+              <%#= post.genre.name %>
+            </div>
+            <div class="col-md-8">
+              <div class="card-body">
+                <h5 class="card-title">
+                  <%= link_to post_path(post.id) do %>
+                    <%= post.title %>
+                  <% end %>
+                </h5>
+                <p class="card-text">
+                  <i class="fas fa-user"></i><%= post.user.nickname %>
+                </p>
+                <p class="card-text">
+                  <i class="far fa-comment text-dark"></i><%= post.post_comments.count %>
+                  <span>　</span>
+                  <% if post.favorited_by?(current_user) %>
+                    <i class="fas fa-thumbs-up"></i><%= post.favorites.count %>
+                  <% else %>
+                    <i class="far fa-thumbs-up"></i><%= post.favorites.count %>
+                  <% end %>
+                  <span>　</span>
+                  <small class="text-muted"><%= post.created_at.strftime('%Y/%m/%d  %H:%M') %></small>
 
-          <%# if post.post_images.attached? %>
-            <%# post.post_images.each do |image| %>
-              <%#= image_tag image.variant(resize: '100x100').processed %>
-            <%# end %>
-          <%# end %>
-        </table>
+                </p>
+                <%# post.tags.each do |tag| %>
+                  <%#=link_to "##{tag.tag_name}",posts_path(tag_id: tag.id) %>
+                <%# end %>
+              </div>
+            </div>
+          </div>
+        <div class="col-md-2">
+        </div>
       <% end %>
-      <%= paginate @posts %>
-    </div>
-  </div>
 </div>
+      <%= paginate @posts %>
+
+
 
 
