--- a/app/views/public/users/_list.html.erb
+++ b/app/views/public/users/_list.html.erb
@@ -1,5 +1,5 @@
 <%= form_with url: search_posts_path, method: :get, local: true do |f| %>
-  <%= f.text_field :keyword, value: keyword %>
+  <%= f.text_field :keyword, value: keyword,size: 28 %>
   <%= f.submit "検索" %>
 <% end %>
 
