--- a/app/views/public/users/show.html.erb
+++ b/app/views/public/users/show.html.erb
@@ -37,7 +37,7 @@
         <% @posts.each do |post| %>
           <table>
             <tr>
-              <td><%= image_tag @user.get_profile_image(50,50),class:"ml-3 rounded-circle" %></td>
+              <td><%= image_tag @user.get_profile_image(50,50),class:"m-2 rounded-circle" %></td>
               <td>　</td>
               <td>
                 <%= link_to post_path(post.id) do %>
