--- a/app/views/public/users/show.html.erb
+++ b/app/views/public/users/show.html.erb
@@ -3,7 +3,7 @@
   <div class = "card m-5">
     <div class="row no-gutters">
       <div class="col-md-3">
-        <%= image_tag @user.get_profile_image(150,150),class:"ml-2 rounded-circle" %>
+        <%= image_tag @user.get_profile_image(150,150),class:"m-2 rounded-circle" %>
       </div>
       <div class="col-md-9">
         <div class="card-body">
