--- a/app/views/public/posts/show.html.erb
+++ b/app/views/public/posts/show.html.erb
@@ -1,80 +1,114 @@
-<h1>投稿詳細</h1>
+<h1><%= @post.user.nickname %>さんの投稿詳細</h1>
 <div class = "container-fluid">
-  <div class = "row">
-    <div class = "col-lg-3">
+  <div class = "row no-gutters">
+    <div class = "col-md-3">
       <%= render 'public/users/list',keyword: @keyword, tag_lists: @tag_lists %></br>
     </div>
-    <div class = "col-lg-9">
+
+    <div class = "col-md-5 offset-md-1">
       <% if @post.post_status != "publish" && @post.user != current_user %>
        この記事は公開されていません(´･ω･`)
       <% else %>
-        <div>
-          <% if @post.post_images.attached? %>
-            <% @post.post_images.each do |image| %>
-              <%= link_to image, "data-lightbox": image do %>
-              <%= image_tag image.variant(resize_to_limit:[150,150]).processed %>
+
+      <div class="card w-100 mx-auto mt-4 shadow-lg">
+        <div class="row justify-content-around">
+            <% if @post.post_images.attached? %>
+              <% @post.post_images.each do |image| %>
+                <%= link_to image, "data-lightbox": image do %>
+                <%= image_tag image.variant(resize_to_limit:[88,88]).processed, class:"card-img-top"; %>
+                <% end %>
               <% end %>
+            <% else %>
+              <%= image_tag 'no_image.jpg', class:"card-img-top"; %>
             <% end %>
-          <% else %>
-            <%= image_tag 'no_image.jpg' %>
-          <% end %>
         </div>
-        <p>
-          投稿者:<%= @post.user.nickname %>
-          <%= @post.created_at.strftime('%Y/%m/%d  %H:%M') %>
-        </p>
-        <p>タイトル:【<%= @post.genre.name %>】<%= @post.title %></p>
-        本文:<%= @post.body %>
-        <% if @post.favorited_by?(current_user) %>
-          <p>
-            <%= link_to post_favorites_path(@post), method: :delete do %>
-              ♥<%= @post.favorites.count %> いいね
-            <% end %>
-          </p>
-          <% else %>
-          <p>
-            <%= link_to post_favorites_path(@post), method: :post do %>
-              ♡<%= @post.favorites.count %> いいね
-            <% end %>
-          </p>
-        <% end %>
-        <% if @post.user==current_user# && @post.post_status != "publish" %>
-          <%= link_to "記事編集",edit_post_path(@post.id) %>
-        <% end %></br>
-        ～以下コメント欄～
-        <table>
-          <tr>
-            <td>コメント件数：<%= @post.post_comments.count %></td>
-          </tr>
-          <% @post.post_comments.each do |post_comment| %>
-          <tr>
-            <td>
-              <%= image_tag post_comment.user.get_profile_image(50,50) %>
-              <%= post_comment.user.nickname %>
-              <%= post_comment.created_at.strftime('%Y/%m/%d') %>
-              <% if post_comment.is_deleted==false %>
-                <%= post_comment.comment %>
-              <% else %>
-                ≪このコメントは削除されました≫
-              <% end %>
-            </td>
-          </tr>
-          <% end %>
-        </table>
-        <div>
-          <%= form_with(model: [@post, @post_comment]) do |f| %>
-            <%= f.text_area :comment, rows: '5', placeholder: "コメントはこちら" %>
-            <%= f.submit "送信する" %>
-          <% end %>
-        </div>
-        <div>
-          タグ：
+          <div class="card-body">
+            <div class="row">
+              <div class="col-4">
+              <%= image_tag @post.user.get_profile_image(75,75), class:"rounded-circle";  %>
+            </div>
+            <div class="col-8">
+              <h4 class="card-title"><%= @post.title %></h4>
+              <p class="card-text"><%= @post.body %></P>
+              <p class="card-text">
+                <span>
+                  <% if user_signed_in? && @post.favorited_by?(current_user) %>
+                    <i class="fas fa-thumbs-up"></i><%= @post.favorites.count %>
+                  <% else %>
+                    <i class="far fa-thumbs-up"></i><%= @post.favorites.count %>
+                  <% end %>
+                </span>
+                <span>　</span>
+                <span>
+                  <%= link_to post_path(@post.id) do %>
+                    <i class="far fa-comment text-dark"></i><%= @post.post_comments.count %>
+                  <% end %>
+                </span>
+                <span>　</span>
+                <span>
+                  <small class="text-muted">
+                    <%= @post.created_at.strftime('%Y/%m/%d  %H:%M') %>
+                  </small>
+                </span>
+              </p>
+            </div>
+          </div>
+          <div>
             <% @post.tags.each do |tag| %>
               <%=link_to "##{tag.tag_name}",posts_path(tag_id: tag.id) %>
             <%end%>
+          </div>
+          <div>
+            <% if @post.user==current_user# && @post.post_status != "publish" %>
+              <%= link_to edit_post_path(@post.id) do %>
+                <i class="fas fa-edit"></i>編集する
+              <%end%>
+            <% end %>
+          </div>
         </div>
+        <div>
+          <%= form_with(model: [@post, @post_comment]) do |f| %>
+            <%= f.text_area :comment,  placeholder: "コメントはこちら", style: "width:100%" %>
+            <%= f.submit "送信する", style: "width:100%",class:"btn btn-primary" %>
+          <% end %>
+        </div>
+      </div>
+      <div>
+
+      <% @post.post_comments.each do |post_comment| %>
+        <div class="card">
+          <div class="row no-gutters">
+            <div class="col-md-4">
+              <%= image_tag post_comment.user.get_profile_image(75,75), class:"m-3 rounded-circle"; %>
+            </div>
+            <div class="col-md-8">
+              <div class="card-body">
+                <h5 class="card-title">
+                  <%= post_comment.user.nickname %>
+                </h5>
+                <p class="card-text">
+                  <% if post_comment.is_deleted==false %>
+                    <%= post_comment.comment %>
+                  <% else %>
+                    ≪コメントは削除されました≫
+                  <% end %>
+                </p>
+                <p class="card-text">
+                  <small class="text-muted"><%= @post.created_at.strftime('%Y/%m/%d  %H:%M') %></small>
+                </p>
+              </div>
+            </div>
+          </div>
+        </div>
+      <% end %>
+    </div>
+
+
+
       <%# else %>
       <% end %>
     </div>
+    </div>
   </div>
+  <div class = "col-md-2 offset-md-1"></div>
 </div>
