--- a/app/views/public/posts/new.html.erb
+++ b/app/views/public/posts/new.html.erb
@@ -1,5 +1,5 @@
 <% if @post.errors.any? %>
-  <h3><% pluralize(@post.errors.count,"error")%>件のエラーが発生しました。</h3>
+  <h3><%= @post.errors.count %>件のエラーが発生しました。</h3>
   <ul>
     <% @post.errors.full_messages.each do |message| %>
       <li><%= message %></li>
