[Update]レイアウトを一部修正

--- a/app/views/public/posts/index.html.erb
+++ b/app/views/public/posts/index.html.erb
@@ -1,9 +1,10 @@
-<h1>投稿一覧(全<%= @posts.total_count %>件)</h1>
+<h1><i class="fas fa-fan"></i>投稿一覧(全<%= @posts.total_count %>件)</h1>
 <div class = "container-fluid">
   <div class = "row">
     <div class = "col-md-3">
       <%= render 'public/users/list',keyword: @keyword, tag_lists: @tag_lists %>
     </div>
+
     <div class = "col-md-5 offset-md-1">
       <% @posts.each do |post| %>
         <div class="card">
