--- a/app/views/public/posts/new.html.erb
+++ b/app/views/public/posts/new.html.erb
@@ -6,8 +6,8 @@
     <% end %>
   </ul>
 <% end %>
-<h1>投稿フォーム</h1>
-<div class = "container">
+<h1><i class="fas fa-fan"></i>新規投稿</h1>
+<div class = "container-fluid">
   <div class = "row">
     <div class = "col-lg-3">
       <%= render 'public/users/list',keyword: @keyword, tag_lists: @tag_lists %></br>
