--- a/app/views/public/users/edit.html.erb
+++ b/app/views/public/users/edit.html.erb
@@ -1,11 +1,11 @@
-<h1>プロフィール編集</h1>
+<h1><i class="fas fa-fan"></i>プロフィール編集</h1>
 <div class = "container-fluid">
   <div class = "row">
     <div class = "col-md-3">
       <%= render 'list',keyword: @keyword, tag_lists: @tag_lists %>
     </div>
 
-    <div class = "col-md-9">
+    <div class = "col-md-5 offset-md-1">
       <%= form_with model: @user, url: user_path, method: :patch do |f| %>
       <table>
         <tr>
