--- a/app/views/public/users/myfavorites.html.erb
+++ b/app/views/public/users/myfavorites.html.erb
@@ -3,8 +3,8 @@
     <div class = "col-md-3">
       <%= render 'public/users/list',keyword: @keyword, tag_lists: @tag_lists %>
     </div>
-    <div class = "col-md-6 offset-md-1">
-      <h3>いいねした投稿一覧</h3>
+    <div class = "col-md-5 offset-md-1">
+      <h3><i class="fas fa-fan"></i>いいねした投稿一覧</h3>
       <% @myfavorite_posts.each do |post| %>
           <table>
             <tr>
