[Update]レイアウトを一部修正

--- a/app/views/admin/genres/edit.html.erb
+++ b/app/views/admin/genres/edit.html.erb
@@ -1,4 +1,4 @@
-<div><h3>　ジャンル編集</h3></div>
+<div><h1><i class="fas fa-fan"></i>ジャンル編集</h1></div>
 <div>
   <%= form_with model: @genre, url: admin_genre_path(@genre.id), method: :patch do |f| %>
   <table>
