--- a/app/views/admin/genres/index.html.erb
+++ b/app/views/admin/genres/index.html.erb
@@ -1,4 +1,4 @@
-<h1>ジャンル一覧</h1>
+<h1><i class="fas fa-fan"></i>ジャンル一覧</h1>
 <%= form_with model: @genre, url: admin_genres_path, method: :post do |f| %>
   <div>
     <table>
