--- a/app/views/admin/users/edit.html.erb
+++ b/app/views/admin/users/edit.html.erb
@@ -1,4 +1,4 @@
-<h2>会員情報編集<悪用厳禁></h2>
+<h2><i class="fas fa-fan"></i>会員情報編集<悪用厳禁></h2>
 
 <%= form_with model: @user, url: admin_user_path, method: :patch do |f| %>
 
