--- a/app/views/public/homes/top.html.erb
+++ b/app/views/public/homes/top.html.erb
@@ -1,4 +1,4 @@
-<h1>ガーデニングコミュ</h1>
+<h1><i class="fas fa-fan"></i>ガーデニングコミュ</h1>
 <div class = "container-fluid">
   <div class = "row no-gutters">
     <div class = "col-md-3">
