--- a/app/views/public/users/myfavorites.html.erb
+++ b/app/views/public/users/myfavorites.html.erb
@@ -6,32 +6,40 @@
     <div class = "col-md-5 offset-md-1">
       <h3><i class="fas fa-fan"></i>いいねした投稿一覧</h3>
       <% @myfavorite_posts.each do |post| %>
-          <table>
-            <tr>
-              <td><%= image_tag post.user.get_profile_image(50,50),class:"m-2 rounded-circle" %></td>
-              <td>　</td>
-              <td>
-                <%= link_to post_path(post.id) do %>
-                  <% if @user==current_user && post.post_status=="unpublish" %>
-                    【非公開】
-                  <% elsif @user==current_user && post.post_status=="draft" %>
-                    【下書き】
+        <div class="card">
+          <div class="row no-gutters">
+            <div class="col-md-4">
+              <%= image_tag post.user.get_profile_image(50,50),class:"m-2 rounded-circle" %>
+            </div>
+            <div class="col-md-8">
+              <div class="card-body">
+                <h5 class="card-title">
+                  <%= link_to post_path(post.id) do %>
+                    <% if @user==current_user && post.post_status=="unpublish" %>
+                      【非公開】
+                    <% elsif @user==current_user && post.post_status=="draft" %>
+                      【下書き】
+                    <% end %>
+                    <%= post.title %>
+                  <%end%>
+                </h5>
+                <p class="card-text">
+                  <%= link_to post_path(post.id) do %>
+                    <i class="far fa-comment text-dark"></i><%= post.post_comments.count %>
                   <% end %>
-                  <%= post.title %>
-                <%end%>
-              </td>
-              <td>　</td>
-              <td><i class="far fa-comment text-dark"></i><%= post.post_comments.count %></td>
-              <td>　</td>
-              <td>
-                <% if post.favorited_by?(current_user) %>
-                    <i class="fas fa-thumbs-up"></i><%= post.favorites.count %>
-                  <% else %>
-                    <i class="far fa-thumbs-up"></i><%= post.favorites.count %>
-                <% end %>
-              </td>
-            </tr>
-          </table>
+                  <span>　</span>
+                  <% if post.favorited_by?(current_user) %>
+                      <i class="fas fa-thumbs-up"></i><%= post.favorites.count %>
+                    <% else %>
+                      <i class="far fa-thumbs-up"></i><%= post.favorites.count %>
+                  <% end %>
+                </p>
+              </div>
+            </div>
+          </div>
+        </div>
       <% end %>
+    </div>
+  </div>
 </div>
       <%#= paginate @posts %>
