--- a/app/views/public/posts/show.html.erb
+++ b/app/views/public/posts/show.html.erb
@@ -1,4 +1,4 @@
-<h1><%= @post.user.nickname %>さんの投稿詳細</h1>
+<h1><i class="fas fa-fan"></i><%= @post.user.nickname %>さんの投稿詳細</h1>
 <div class = "container-fluid">
   <div class = "row no-gutters">
     <div class = "col-md-3">
