--- a/app/views/public/registrations/new.html.erb
+++ b/app/views/public/registrations/new.html.erb
@@ -1,4 +1,4 @@
-<h2>新規会員登録</h2>
+<h2><i class="fas fa-fan"></i>新規会員登録</h2>
 
 <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
   <%= render "public/shared/error_messages", resource: resource %>
@@ -33,6 +33,7 @@
     </tr>
   </table>
 <% end %>
+※プロフィール画像は登録後に変更できます
 
 <%#= render "public/shared/links" %>
 <h4>既に登録済みの方</h4>
