--- a/app/views/public/users/edit.html.erb
+++ b/app/views/public/users/edit.html.erb
@@ -25,7 +25,7 @@
           <td><%= f.text_area :introduction,size: "50x3",placeholder:"140文字以内" %></td>
         </tr>
         <tr>
-          <td><%= f.label :プロフィール画像（FirstName） %></td>
+          <td><%= f.label :プロフィール画像 %></td>
           <td><%= f.file_field :profile_image, placeholder: "プロフィール画像", accept: "image/*" %></td>
         </tr>
         <tr>
