--- a/app/views/public/posts/index.html.erb
+++ b/app/views/public/posts/index.html.erb
@@ -49,7 +49,7 @@
       <% end %>
     </div>
     <div class="col-md-2 offset-md-1">
-      <% if @posts.total_count!=0 %>
+      <%# if @posts.total_count!=0 %>
         <% @genres.each do |genre| %>
           <table>
             <tr>
@@ -58,7 +58,7 @@
             <tr>　</tr>
           </table>
         <% end %>
-      <% end %>
+      <%# end %>
     </div>
   </div>
 </div>
