--- a/app/views/admin/genres/index.html.erb
+++ b/app/views/admin/genres/index.html.erb
@@ -4,7 +4,7 @@
     <table>
       <tr>
         <th><h4>ジャンル名</h4></th>
-        <td><%= f.text_field :name, placeholder: "新しいジャンル" %></td>
+        <td><%= f.text_field :name, placeholder: "新しいジャンルは？" %></td>
         <td><%= f.submit '新規登録' %></td>
       </tr>
     </table>
