--- a/app/views/public/homes/about.html.erb
+++ b/app/views/public/homes/about.html.erb
@@ -1,4 +1,4 @@
-<h2>ローカルの変更部分を本番環境のアプリケーションに適用する</h2>
+<h2>ローカルの変更を本番環境のアプリケーションに適用する</h2>
 <p>
   １．cd gardening</br>
   ２．ファイルを編集・保存、gitにpushしてctrl+C</br>
