--- a/app/views/public/posts/index.html.erb
+++ b/app/views/public/posts/index.html.erb
@@ -2,7 +2,7 @@
 <div class = "container-fluid">
   <div class = "row">
     <div class = "col-md-3">
-      <%= render 'public/users/list',keyword: @keyword, tag_lists: @tag_lists %>
+      <%= render 'public/users/list',keyword: @keyword, tag_lists: @tags %>
     </div>
 
     <div class = "col-md-5 offset-md-1">
