--- a/app/views/public/homes/about.html.erb
+++ b/app/views/public/homes/about.html.erb
@@ -5,7 +5,7 @@
   ３．ssh -i ~/.ssh/practice-aws.pem ec2-user@*****</br>
   ４．cd gardening2/</br>
   ５．git pull origin main</br>
-  ６．sudo yum update（必要に応じ）</br>
+  ６．sudo yum update（必要に応じて）</br>
   ７．sudo kill $(cat tmp/pids/puma.pid)</br>
   ８．rails s -e productionで</br>
 </p>
