--- a/app/views/public/homes/about.html.erb
+++ b/app/views/public/homes/about.html.erb
@@ -14,3 +14,12 @@
 <p>
   １．「お名前.com」で適当なドメインを作成
 </p>
+
+<h2>ドメイン及びEIPの設定</h2>
+<p>
+  １．EC2→Elastic IPを作成「Elastic IPを割り当てる」
+  ２．「Elastic IPアドレスの関連付け」→インスタンスをポートフォリオ（EC2)に、プライベートIPアドレスを172.~に設定
+  ３．Route53→ダッシュボードから「ホストゾーン」→ドメイン名(oniwanotomo)選択→Aレコード選択→右サイドバー「編集」→値を新しいEIPに書き換え
+  ４．EC2インスタンス起動
+  ５．cloud9でポートフォリオ実行
+</p>
