--- a/app/views/public/inquiries/confirm.html.erb
+++ b/app/views/public/inquiries/confirm.html.erb
@@ -1,2 +1,45 @@
-<h1>Public::Inquiries#confirm</h1>
-<p>Find me in app/views/public/inquiries/confirm.html.erb</p>
+<% if @inquiry.errors.any? %>
+  <h3><%= @inquiry.errors.count %>件のエラーが発生しました。</h3>
+  <ul>
+    <% @inquiry.errors.full_messages.each do |message| %>
+      <li><%= message %></li>
+    <% end %>
+  </ul>
+<% end %>
+<h1><i class="fas fa-fan"></i>お問い合わせ確認</h1>
+<div class = "container-fluid">
+  <div class = "row">
+    <div class = "col-md-3">
+      <%= render 'public/users/list',keyword: @keyword, tag_lists: @tags %></br>
+    </div>
+    <div class = "col-md-5 offset-md-1">
+      <table>
+        <tr>
+          <td>お名前</td>
+        </tr>
+        <tr>
+          <td><%= @inquiry.nickname %></td>
+        </tr>
+        <tr>
+          <td>メッセージ</td>
+        </tr>
+        <tr>
+          <td style="white-space: pre-wrap;"><%= @inquiry.message %></td>
+        </tr>
+      </table>
+      <%= form_with model: @inquiry, local: true do |f| %>
+        <%= f.hidden_field :nickname %>
+        <%= f.hidden_field :message %>
+        <div><%= f.submit "送信", class:'btn btn-success' %></div>
+      <% end %>
+      <%#= form_with model: @inquiry,url: back_path do |f| %>
+        <%#= f.hidden_field :nickname %>
+        <%#= f.hidden_field :message %>
+        <div><%#= f.submit "入力画面に戻る" %></div>
+        <%#= link_to "戻る", new_inquiry_path %>
+      <%# end %>
+    </div>
+    <div class="col-md-2 offset-md-1">
+    </div>
+  </div>
+</div>
