[Add]お問い合わせ機能6-3（完成）thanks画面

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -27,22 +27,32 @@
             <% if user_signed_in? %>
               ようこそ、<%= current_user.nickname %>さん！会員ページにログイン中
               <li class="nav-item">
-                <%= link_to "マイページ", user_path(current_user.id),class: 'nav-link text-black' %>
+                <%= link_to user_path(current_user.id),class: 'nav-link text-black' do %>
+                  <i class="fas fa-user"></i>ﾏｲﾍﾟｰｼﾞ
+                <% end %>
               </li>
               <li class="nav-item">
-                <%= link_to "投稿一覧", posts_path,class: 'nav-link text-black' %>
+                <%= link_to posts_path,class: 'nav-link text-black' do %>
+                  <i class="fas fa-book-open"></i>投稿一覧
+                <% end %>
               </li>
               <li class="nav-item">
-                <%= link_to "会員一覧", users_path,class: 'nav-link text-black' %>
+                <%= link_to users_path,class: 'nav-link text-black' do %>
+                  <i class="fas fa-user-friends"></i>会員一覧
+                <% end %>
               </li>
               <li class="nav-item">
-                <%= link_to "新規投稿", new_post_path,class: 'nav-link text-black' %>
+                <%= link_to new_post_path,class: 'nav-link text-black' do %>
+                  <i class="fas fa-pen"></i>新規投稿
+                <% end %>
               </li>
               <li class="nav-item">
-                <%= link_to "ログアウト", destroy_user_session_path, method: :delete,class: 'nav-link text-black' %>
+                <%= link_to destroy_user_session_path, method: :delete,class: 'nav-link text-black' do %>
+                  <i class="fas fa-sign-out-alt"></i>ﾛｸﾞｱｳﾄ
+                <% end %>
               </li>
             <% elsif admin_signed_in? %>
-              (´･ω･`)管理者画面
+              管理者画面
               <li class="nav-item">
                 <%= link_to "投稿一覧", admin_root_path,class: 'nav-link text-black' %>
               </li>
