--- a/app/views/public/users/_list.html.erb
+++ b/app/views/public/users/_list.html.erb
@@ -8,3 +8,7 @@
     #<%= tag.tag_name %>
   <% end %>
 <% end %>
+
+<%= link_to new_inquiry_path, class:"btn btn-warning" do %>
+  <i class="fas fa-envelope"></i>お問い合わせ
+<% end %>
