--- a/app/views/public/inquiries/confirm.html.erb
+++ b/app/views/public/inquiries/confirm.html.erb
@@ -6,7 +6,7 @@
     <% end %>
   </ul>
 <% end %>
-<h1><i class="fas fa-fan"></i>お問い合わせ確認</h1>
+<h1><i class="fas fa-fan"></i>お問い合わせ</h1>
 <div class = "container-fluid">
   <div class = "row">
     <div class = "col-md-3">
@@ -27,10 +27,13 @@
           <td style="white-space: pre-wrap;"><%= @inquiry.message %></td>
         </tr>
       </table>
-      <%= form_with model: @inquiry, local: true do |f| %>
+      <%= form_with model: @inquiry, url: thanks_path, local: true do |f| %>
         <%= f.hidden_field :nickname %>
         <%= f.hidden_field :message %>
-        <div><%= f.submit "送信", class:'btn btn-success' %></div>
+        <div>
+          <p>この内容で送信しますか？</p>
+          <%= f.submit "送信", class:'btn btn-success' %>
+        </div>
       <% end %>
       <%#= form_with model: @inquiry,url: back_path do |f| %>
         <%#= f.hidden_field :nickname %>
