--- a/app/views/public/inquiries/thanks.html.erb
+++ b/app/views/public/inquiries/thanks.html.erb
@@ -1,2 +1,26 @@
-<h1>Public::Inquiries#thanks</h1>
-<p>Find me in app/views/public/inquiries/thanks.html.erb</p>
+<h1><i class="fas fa-fan"></i>お問い合わせ</h1>
+<div class = "container-fluid">
+  <div class = "row">
+    <div class = "col-md-3">
+      <%= render 'public/users/list',keyword: @keyword, tag_lists: @tags %></br>
+    </div>
+    <div class = "col-md-5 offset-md-1">
+      <table>
+        <tr>
+          <td></td>
+        </tr>
+        <tr>
+          <td>お問い合わせありがとうございました。</td>
+        </tr>
+        <tr>
+          <td></td>
+        </tr>
+        <tr>
+          <td></td>
+        </tr>
+      </table>
+    </div>
+    <div class="col-md-2 offset-md-1">
+    </div>
+  </div>
+</div>
