[Fix]アイコンを一部修正

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -42,6 +42,11 @@
                 <% end %>
               </li>
               <li class="nav-item">
+                <%= link_to new_inquiry_path,class: 'nav-link text-black' do %>
+                  <i class="fas fa-envelope"></i>お問い合わせ
+                <% end %>
+              </li>
+              <li class="nav-item">
                 <%= link_to new_post_path,class: 'nav-link text-black' do %>
                   <i class="fas fa-pen"></i>新規投稿
                 <% end %>
