[Update]コントローラを整理

--- a/app/views/public/inquiries/new.html.erb
+++ b/app/views/public/inquiries/new.html.erb
@@ -25,7 +25,7 @@
           </tr>
           <tr>
             <td><%= f.text_area :message, size:"50x8", class: 'form-control',
-                placeholder: "ご意見、感想、質問、通報など" %></td>
+                placeholder: "ご意見、感想、質問、通報etc" %></td>
           </tr>
           <tr>
             <td><%= f.submit '確認画面へ進む', class:"btn btn-primary" %></td>
