--- a/app/views/public/inquiries/thanks.html.erb
+++ b/app/views/public/inquiries/thanks.html.erb
@@ -10,7 +10,7 @@
           <td></td>
         </tr>
         <tr>
-          <td>お問い合わせありがとうございました。</td>
+          <td>お問い合わせありがとうございました！</td>
         </tr>
         <tr>
           <td></td>
