[Update]メール機能全体を微修正

--- a/app/views/inquiry_mailer/send_mail.text.erb
+++ b/app/views/inquiry_mailer/send_mail.text.erb
@@ -1,7 +1,7 @@
 oniwanotomo.comからお問い合わせがありました。
 
 --------------------------
-Name: <%= @inquiry.nickname %>
+Name: <%= @inquiry.name %>
 Message:
 <%= @inquiry.message %>
 --------------------------
