--- a/app/views/inquiry_mailer/send_mail.html.erb
+++ b/app/views/inquiry_mailer/send_mail.html.erb
@@ -4,7 +4,7 @@
     <meta content='text/html; charset=UTF-8' http-equiv='Content-Type' />
   </head>
   <body>
-    <h1><%= @inquiry.nickname %> 様 から問い合わせがありました。</h1>
+    <h1><%= @inquiry.name %> 様 から問い合わせがありました。</h1>
     <p>・お問い合わせ内容</p>
     <p><%= @inquiry.message %></p>
   </body>
